--- a/style.css
+++ b/style.css
@@ -57,6 +57,29 @@ p {
   margin: 0;
 }
 
+.codeAndScroll {
+  padding: 0 2.5rem 0.5rem 2.5rem;
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.scrollToTop {
+  padding: 0px 10px;
+  cursor: pointer;
+}
+#controls {
+  margin-left: 1rem;
+}
+
+input,
+select,
+button,
+#countDisplay {
+  padding: 10px;
+  margin-right: 10px;
+}
+
 .card {
   margin: 1rem;
   background: white;
