--- a/style.css
+++ b/style.css
@@ -12,23 +12,6 @@ html {
 }
 
 #root {
-  color: red;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-html {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-family: "Dosis", sans-serif;
-  line-height: 1.6;
-  color: #666;
-  background: #f6f6f6;
-}
-
-#root {
   max-width: 1200px;
   margin: 0 auto;
 }
@@ -39,6 +22,8 @@ html {
 }
 
 h1 {
+  border: 1px solid black;
+  border-radius: 12px;
   text-align: center;
   padding: 1.5rem 2.5rem;
   margin: 0 0 2rem 0;
